--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-live-photo",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "An Obsidian plugin for viewing and managing Live Photos with elegant interface",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+		"obsidian",
+		"plugin",
+		"live-photo",
+		"heic",
+		"photos",
+		"media",
+		"viewer"
+	],
+	"author": "Live Photo Plugin Team",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
