Refactor plugin name and copyright details: change from "Obsidian Live Photo" to "Live Photo Viewer" and update copyright holder to ryne6. Remove unused debounce function from utils.ts for cleaner code.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "obsidian-live-photo",
+	"name": "live-photo-plugin",
 	"version": "1.0.0",
 	"description": "An Obsidian plugin for viewing and managing Live Photos with elegant interface",
 	"main": "main.js",
